--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -19,7 +19,7 @@
           <ul class="mt-3 space-y-2">
             <li><a class="hover:text-black" href="packages.html">Packages</a></li>
             <li><a class="hover:text-black" href="build-solution.html">Build your PBX</a></li>
-            <li><a class="hover:text-black" href="order-hardware.html">Order hardware</a></li>
+            <li><a class="hover:text-black" href="mobile-app.html">Mobile App</a></li>
           </ul>
         </div>
         <div>
