--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -25,7 +25,7 @@
         <div>
           <p class="text-[11px] uppercase tracking-widest text-gray-500">Company</p>
           <ul class="mt-3 space-y-2">
-            <li><a class="hover:text-black" href="about.html">About</a></li>
+            <li><a class="hover:text-black" href="About.html">About</a></li>
             <li><a class="hover:text-black" href="blog.html">Blog</a></li>
             <li><a class="hover:text-black" href="contact.html">Contact</a></li>
           </ul>
