--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -43,7 +43,8 @@
 
     <div class="mt-10 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
       <div class="text-xs text-gray-500">
-        © <span id="year"></span> Voipshop · Johannesburg
+        © <span id="year"></span> Voipshop · Johannesburg · Contact us : 010 101 4370
+    </div>
     </div>
   </div>
 </footer>
